# UXP

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .hg_archival.txt  AUTHORS  CLOBBER  CODE_OF_CONDUCT.md  LICENSE  Makefile.in  README.md  SECURITY.md  aclocal.m4  client.mk  moz.build  moz.configure  old-configure.in  settings.gradle
application/basilisk/: LICENSE  app.mozbuild  build.mk  configure.in  confvars.sh  moz.build  moz.configure
application/basilisk/app/: Makefile.in  application.ini  basilisk.exe.manifest  blocklist.xml  module.ver  moz.build  nsBrowserApp.cpp  permissions  splash.rc
application/basilisk/base/: jar.mn  moz.build
application/basilisk/components/: BrowserComponents.manifest  distribution.js  moz.build  nsBrowserContentHandler.js  nsBrowserGlue.js
application/basilisk/docs/: index.rst
application/basilisk/extensions/: moz.build
application/basilisk/installer/: Makefile.in  allowed-dupes.mn  package-manifest.in
application/basilisk/locales/: Makefile.in  jar.mn  l10n.ini
application/basilisk/modules/: AboutHome.jsm  AboutNewTab.jsm  ContentClick.jsm  ContentCrashHandlers.jsm  DirectoryLinksProvider.jsm  FormValidationHandler.jsm  NetworkPrioritizer.jsm  PermissionUI.jsm  PluginContent.jsm  ProcessHangMonitor.jsm  ReaderParent.jsm  RecentWindow.jsm  RemotePrompt.jsm  SitePermissions.jsm  WindowsJumpLists.jsm  WindowsPreviewPerTab.jsm  moz.build  webrtcUI.jsm
application/basilisk/themes/: moz.build  tab-svgs.mozbuild
application/palemoon/: app.mozbuild  build.mk  configure.in  confvars.sh  moz.build  moz.configure
application/palemoon/app/: Makefile.in  application.ini  blocklist.xml  module.ver  moz.build  nsBrowserApp.cpp  palemoon.exe.manifest  permissions
application/palemoon/base/: jar.mn  moz.build
application/palemoon/components/: BrowserComponents.manifest  distribution.js  moz.build  nsAboutRedirector.js  nsBrowserContentHandler.js  nsBrowserGlue.js
application/palemoon/config/: version.txt
application/palemoon/fonts/: moz.build
application/palemoon/installer/: Makefile.in  package-manifest.in  removed-files.in
application/palemoon/locales/: Makefile.in  jar.mn  l10n.ini
application/palemoon/modules/: AboutHomeUtils.jsm  AutoCompletePopup.jsm  BrowserNewTabPreloader.jsm  FormSubmitObserver.jsm  FormValidationHandler.jsm  NetworkPrioritizer.jsm  PopupNotifications.jsm  QuotaManager.jsm  RecentWindow.jsm  SharedFrame.jsm  Windows8WindowFrameColor.jsm  WindowsJumpLists.jsm  WindowsPreviewPerTab.jsm  moz.build  openLocationLastURL.jsm  promise.js  webrtcUI.jsm
application/palemoon/themes/: moz.build
browser/: LICENSE  configure.in  confvars.sh  moz.build  moz.configure
browser/app/: Makefile.in  blocklist.xml  moz.build  nsBrowserApp.cpp  permissions
browser/app/profile/: firefox.js
browser/base/: jar.mn
browser/base/content/: aboutDialog.js  aboutDialog.xul  browser-context.inc  browser-media.js  browser-menubar.inc  browser-places.js  browser-plugins.js  browser-safebrowsing.js  browser-sets.inc  browser-trackingprotection.js  browser.css  browser.js  browser.xul  content.js  global-scripts.inc  nsContextMenu.js  tab-content.js  tabbrowser.xml  urlbarBindings.xml  utilityOverlay.js  web-panels.xul
browser/branding/: branding-common.mozbuild
browser/branding/official/: moz.build
browser/branding/shared/: branding.mozbuild  preferences.inc  uaoverrides.inc
browser/branding/unofficial/: LICENSE  firefox.icns  moz.build  serpent.VisualElementsManifest.xml
browser/components/: moz.build  nsBrowserContentHandler.js  nsBrowserGlue.js
browser/components/about/: AboutRedirector.cpp
browser/components/customizableui/: CustomizableUI.jsm  CustomizableWidgets.jsm  CustomizeMode.jsm  moz.build
browser/components/extensions/: ext-browserAction.js
browser/components/migration/: MigrationUtils.jsm  moz.build
browser/components/newtab/: moz.build
browser/components/places/: PlacesUIUtils.jsm  moz.build
browser/components/preferences/: blocklists.js  cookies.js  fonts.xul  jar.mn  moz.build
browser/components/sessionstore/: ContentRestore.jsm  SessionHistory.jsm  SessionStore.jsm
browser/components/shell/: ShellService.jsm  nsGNOMEShellService.cpp  nsWindowsShellService.cpp
browser/extensions/: moz.build
browser/installer/: Makefile.in  package-manifest.in
browser/locales/: Makefile.in  jar.mn
browser/modules/: AboutHome.jsm  BrowserUITelemetry.jsm  ContentWebRTC.jsm  ReaderParent.jsm  SelfSupportBackend.jsm  moz.build
browser/themes/linux/: jar.mn  (+1 more)
(+12922 files in other folders)
