dnl -*- Mode: Autoconf; tab-width: 2; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=2 shiftwidth=2 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl Things we need to carry from confvars.sh
AC_DEFINE(MOZ_PHOENIX)
AC_SUBST(MOZ_PHOENIX)

AC_DEFINE(MC_BASILISK)
AC_SUBST(MC_BASILISK)

dnl Optional parts of the build.

dnl ========================================================
dnl = Disable WebExtensions
dnl ========================================================
MOZ_ARG_DISABLE_BOOL(webextensions,
[  --disable-webextensions            Disable WebExtensions],
    MOZ_WEBEXTENSIONS=,
    MOZ_WEBEXTENSIONS=1)

if test -n "$MOZ_WEBEXTENSIONS"; then
    AC_DEFINE(MOZ_WEBEXTENSIONS)
fi

AC_SUBST(MOZ_WEBEXTENSIONS)