dnl -*- Mode: Autoconf; tab-width: 2; indent-tabs-mode: nil; -*-
dnl vi: set tabstop=2 shiftwidth=2 expandtab:
dnl This Source Code Form is subject to the terms of the Mozilla Public
dnl License, v. 2.0. If a copy of the MPL was not distributed with this
dnl file, You can obtain one at http://mozilla.org/MPL/2.0/.

dnl Things we need to carry from confvars.sh
AC_DEFINE(MOZ_PHOENIX)
AC_SUBST(MOZ_PHOENIX)
AC_DEFINE(MC_PALEMOON)
AC_SUBST(MC_PALEMOON)
AC_DEFINE(MOZ_PHOENIX_EXTENSIONS)
AC_SUBST(MOZ_PHOENIX_EXTENSIONS)

dnl Optional parts of the build.

dnl ========================================================
dnl = Disable the status bar code
dnl ========================================================
MOZ_ARG_DISABLE_BOOL(browser-statusbar,
[  --disable-browser-statusbar           Disable Browser Status bar],
    MOZ_BROWSER_STATUSBAR=,
    MOZ_BROWSER_STATUSBAR=1)

if test -n "$MOZ_BROWSER_STATUSBAR"; then
    AC_DEFINE(MOZ_BROWSER_STATUSBAR)
fi

AC_SUBST(MOZ_BROWSER_STATUSBAR)

dnl ========================================================
dnl = Disable Sync
dnl ========================================================
MOZ_ARG_DISABLE_BOOL(sync,
[  --disable-sync           Disable Sync],
    MOZ_SERVICES_SYNC=,
    MOZ_SERVICES_SYNC=1)

if test -z "$MOZ_SERVICES_SYNC"; then
    MOZ_SERVICES_CLOUDSYNC=
fi

